log4j production update.

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -15,8 +15,8 @@
 #------------------------------------------------------------------------------
 log4j.rootCategory=FATAL, S, R
 
-log4j.logger.net.authorize.util.HttpClient=DEBUG, R
-log4j.logger.net.authorize.sim.TransactionTest=DEBUG, R
+log4j.logger.net.authorize.util.HttpClient=ERROR, R
+log4j.logger.net.authorize.sim.TransactionTest=ERROR, R
 
 #------------------------------------------------------------------------------
 #
